<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stvorialarm.CreateNewAlarm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment_createalarm_scheduleAlarmHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarmiraj_se"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/fragment_createalarm_timePickerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_scheduleAlarmHeading">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:text="@string/vrijeme"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TimePicker
                    android:id="@+id/fragment_createalarm_timePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <EditText
                android:id="@+id/fragment_createalarm_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/naziv_alarma"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_timePickerLayout" />

            <CheckBox
                android:id="@+id/fragment_createalarm_recurring"
                android:layout_width="394dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/ponavljaj"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_title" />

            <LinearLayout
                android:id="@+id/fragment_createalarm_recurring_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring"
                tools:layout_editor_absoluteX="0dp">

            </LinearLayout>

            <Button
                android:id="@+id/fragment_createalarm_scheduleAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/spremi"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="133dp" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/ned"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/sub"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkSun" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/pet"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkSat" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/et"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkFri" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/sri"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkThu" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/uto"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkWed" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="199dp"
                android:minHeight="48dp"
                android:text="@string/pon"
                app:layout_constraintBottom_toTopOf="@+id/fragment_createalarm_scheduleAlarm"
                app:layout_constraintEnd_toStartOf="@+id/fragment_createalarm_checkTue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    </FrameLayout>